chore: add a download company profile button

--- a/public/index.html
+++ b/public/index.html
@@ -160,6 +160,7 @@
                     Upgrade Brand dan Operasional Bisnis
                 </p>
                 <a class="btn btn-primary si-hero__btn" href='/product/'>Selengkapnya</a>
+                <button type="button" class="btn btn-outline-primary si-hero__btn si-hero_btn">Unduh Company Profile</button>
             </div>
             <div class="col-lg-6 text-lg-end">
                 <img alt="Ilustrasi layanan IT" class="si-hero__img is-float"
@@ -689,6 +690,7 @@
           <p class="si-footer__desc mb-0">
             Smart Inovasi adalah mitra resmi Odoo berbasis di Makassar sebagai IT Managed Services dan System Integrator.
           </p>
+          <a class="btn btn-outline-primary mt-3" href='#'>Unduh Company Profile</a>
         </div>
 
         <div class="col-6 col-lg-2">
