update chat dengan kami

--- a/public/index.html
+++ b/public/index.html
@@ -242,7 +242,7 @@
                         <p class="si-program-card__desc">
                             Prakerin + merupakan program praktek belajar langsung di lingkungan pekerjaan bidang IT baik administrasi jaringan, server, hingga pengembangan aplikasi
                         </p>
-                        <a class="si-program-card__link" href='/program1/'>Baca
+                        <a class="si-program-card__link" href='/detailprogram1/'>Baca
                             Selengkapnya...</a>
                     </div>
                 </article>
@@ -256,7 +256,7 @@
                         <h3 class="si-program-card__title">Website Gratis</h3>
                         <p class="si-program-card__desc">Untuk mendukung ekosistem digital terutama di bidang pendidikan, Smart Inovasi menyediakan program layanan pembuatan website gratis...
                         </p>
-                        <a class="si-program-card__link" href='/program2/'>Baca
+                        <a class="si-program-card__link" href='/detailprogram2/'>Baca
                             Selengkapnya...</a>
                     </div>
                 </article>
@@ -592,7 +592,7 @@
             <li><a href='/services/'>› Software Development</a></li>
             <li><a href='/services/'>› IT Managed Services</a></li>
             <li><a href='/services/'>› IT Training</a></li>
-            <li><a href='/services/'>› Webinar</a></li>
+            <li><a href='/services/'>› ERP Solution</a></li>
           </ul>
         </div>
 
