--- a/public/product/index.html
+++ b/public/product/index.html
@@ -259,7 +259,7 @@
             <li><a href='/services/'>› Software Development</a></li>
             <li><a href='/services/'>› IT Managed Services</a></li>
             <li><a href='/services/'>› IT Training</a></li>
-            <li><a href='/services/'>› Webinar</a></li>
+            <li><a href='/services/'>› ERP Solution</a></li>
           </ul>
         </div>
 
