--- a/public/404.html
+++ b/public/404.html
@@ -205,7 +205,7 @@
             <li><a href='/services/'>› Software Development</a></li>
             <li><a href='/services/'>› IT Managed Services</a></li>
             <li><a href='/services/'>› IT Training</a></li>
-            <li><a href='/services/'>› Webinar</a></li>
+            <li><a href='/services/'>› ERP Solution</a></li>
           </ul>
         </div>
 
